--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -102,6 +102,7 @@ editor_options:
 # library(glmmTMB)      # from the glmmTMB package for multi level models
   library(BayesFactor)  # computing Bayes factors, "BayesFactor" package
   library(ggplot2)      # for plotting, "ggplot2" package
+  library(egg)          # for paneling plots, "egg" package
 
   set_sum_contrasts()   # sets orthogonal contrasts for mixed-effects model 
                         # and rmANOVA globally in order to get meaningful Type-III tests
@@ -1599,18 +1600,6 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
   
   sca_results$sign <- ifelse(sca_results$pvalue < .01, sca_results$beta, NA)
   
-  # create the upper panel first, which will show the estimates of 'level' and 'nfc'
-  
-  sca_upperplot <- ggplot(data = sca_results, aes(x = num, y = beta)) +
-    geom_line(aes(group = predictor)) +
-    geom_point(data = sca_results, aes(x = num, y = sign)) +
-    geom_text(x = 3, y = -0.01, label = "NFC") +
-    geom_text(x = 3, y = -0.12, label = "Level") +
-    theme_classic() +
-    labs(x = NULL, y = NULL) +
-    scale_y_continuous(lim = c(NA,0.01), breaks = c(-0.10,-0.05,0), labels = c("-0.10", "-0.05", "Fixed effects \u03b2  0.00")) +
-    theme(axis.text.x = element_blank(), legend.position = "none")
-  
   # add columns to the data frame that describe the pipeline
   
   sca_results$Dim <- ifelse(substr(sca_results$pipeline,1,2) == "AA", 2,
@@ -1628,6 +1617,21 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
                                            ifelse(substr(sca_results$pipeline,4,4) == "3", 15,
                                                   ifelse(substr(sca_results$pipeline,4,4) == "O", 16, 
                                                          ifelse(substr(sca_results$pipeline,4,4) == "T", 17, NA))))))
+  
+
+  # create the upper panel first, which will show the estimates of 'level' and 'nfc'
+  
+  sca_upperplot <- ggplot(data = sca_results, aes(x = num, y = beta)) +
+    geom_line(aes(group = predictor)) +
+    geom_point(data = sca_results, aes(x = num, y = sign)) +
+    geom_text(x = 3, y = -0.01, label = "NFC") +
+    geom_text(x = 3, y = -0.12, label = "Level") +
+    theme_classic() +
+    labs(x = NULL, y = "Fixed effects estimate \u03b2") +
+    scale_y_continuous(lim = c(NA,0.01)) +
+    theme(axis.text.x = element_blank(),
+          axis.line.y = element_line(size = 1, color = "black"), axis.title.y = element_text(margin = margin(r = 10)),
+          legend.position = "none")
 
   # create the lower part of the plot that indicates the pipeline specifications
   
@@ -1638,18 +1642,22 @@ This can be considered preliminary proof-of-concept, as this behavioural pattern
     geom_point(aes(x = num, y = Trans)) +
     geom_point(aes(x = num, y = Excl)) +
     theme_classic() +
-    labs(x = NULL, y = NULL) +
-    scale_y_reverse(breaks = c(1:17), lim = c(17,0), labels = c(expression(bold("Dimension")),
+    labs(x = "Analysis pipeline", y = NULL) +
+    scale_y_reverse(breaks = c(1:17), lim = c(17,0.5), labels = c(expression(bold("Dimension")),
                                                                 "Across S, across C", "Across S, within C",
                                                                 "Within S, within C", "Within S, across C",
                                                                 expression(bold("Transformation")),
                                                                 "Raw/None", "Log", "Inverse", "Square-root",
                                                                 expression(bold("Exclusion")),
-                                                                "None", "2 MAD from median", "2.5 MAD from median",
+                                                                "None", "2 MAD from median", " 2.5 MAD from median",
                                                                 "3 MAD from median", "100ms after onset", "200ms after onset")) +
-    theme(axis.text.x = element_blank(), legend.position = "none")
+    theme(axis.text.x = element_blank(), axis.title.x = element_text(margin = margin(t = 10)),
+          axis.line.y = element_line(size = 1, color = "black"),
+          legend.position = "none")
   
+  # put both plots into one
   
+  sca_plot <- ggarrange(sca_upperplot, sca_lowerplot, nrow = 2, heights = c(1,2.5))
 
 ```
 
